# LibLoader

./: CMakeLists.txt  LICENSE.txt  README.MD  main.c  main.cpp
include/LibLoader/: LibException.hpp  LibHandle.hpp  LibLoader.hpp
src/: LibLoader.cpp  PathUtils.hpp
src/Unix/: UnixLibHandle.cpp  UnixLibHandle.hpp
src/Windows/: WindowsLibHandle.cpp  WindowsLibHandle.hpp
